fixed image issue for notification and otp

--- a/mmadu-notifications/pom.xml
+++ b/mmadu-notifications/pom.xml
@@ -15,7 +15,11 @@
     <description>Mmadu Notification Service</description>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>14</java.version>
+        <spring-boot.build-image.imageName>geraldoyudo/${project.artifactId}:${project.version}
+        </spring-boot.build-image.imageName>
     </properties>
 
     <dependencies>
