--- a/mmadu-notifications/pom.xml
+++ b/mmadu-notifications/pom.xml
@@ -136,6 +136,10 @@
             <artifactId>event-bus</artifactId>
             <version>2.0.3-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
