--- a/notifications/default-rest-sms-provider/pom.xml
+++ b/notifications/default-rest-sms-provider/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mmadu.notifications</groupId>
-    <artifactId>default-rest-sms</artifactId>
+    <artifactId>default-rest-sms-provider</artifactId>
     <version>2.0.3-SNAPSHOT</version>
 
     <properties>
@@ -60,6 +60,17 @@
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity-engine-core</artifactId>
             <version>2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-netty</artifactId>
+            <version>5.10.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-junit-jupiter</artifactId>
+            <version>5.10.0</version>
         </dependency>
     </dependencies>
 
