--- a/mmadu-notifications/pom.xml
+++ b/mmadu-notifications/pom.xml
@@ -63,6 +63,11 @@
             <version>2.0.3-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>com.mmadu.notifications</groupId>
+            <artifactId>default-rest-sms-provider</artifactId>
+            <version>2.0.3-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
         </dependency>
