Add default ports for all services

--- a/mmadu-identity/src/main/resources/application.yml
+++ b/mmadu-identity/src/main/resources/application.yml
@@ -34,7 +34,7 @@ mmadu:
     domain-parsing:
       path-keys: domain,domainId,domains
   userService:
-    url: http://localhost:10080
+    url: http://localhost:15551
   domain-identity-config:
     domains:
       - domainId: "0"
@@ -94,3 +94,5 @@ mmadu:
             authorities:
               - a.*.**
               - r.super_admin
+server:
+  port: 15553
