--- a/mmadu-registration/src/main/resources/application-prod.yml
+++ b/mmadu-registration/src/main/resources/application-prod.yml
@@ -135,3 +135,5 @@ mmadu:
               fieldTypeId: mmadu.fields.password
               label: Password
               order: 4
+server:
+  port: 8080
